--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,14 @@
+@font-face {
+  font-family: 'this_is_font_name';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Outline.woff') format('woff');
+  font-weight: normal;
+  font-style: normal; 
+}
+
 .App {
   text-align: center;
+  font-size: 10px;  
+  font-family: this_is_font_name;
 }
 
 .App-logo {
@@ -36,3 +45,5 @@
     transform: rotate(360deg);
   }
 }
+
+
