--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,4 +47,37 @@
   }
 }
 
+/* myplants */
+.thumbnail-container {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
 
+.thumbnail-placeholder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 100%;
+}
+
+.upload-icon {
+  font-size: 32px;
+  color: #999;
+  cursor: pointer;
+}
+
+.upload-text {
+  margin-top: 8px;
+  font-size: 14px;
+  color: #999;
+}
